Fonts, styling, header fixes
Removed fontface and replaced with googlefonts, fixed every section calling those fonts, removed from theme.json, deleted font folder. Placed container on header and edited css. Fixed banner title responsiveness, fixed vacation banner css target. Fixed vacation card border image to not overlap text on honeymoon & wedding page. Fixed margin issues on All Inclusive page.

--- a/css/modules/_banner.scss
+++ b/css/modules/_banner.scss
@@ -14,18 +14,14 @@
     height: 450px;
     background-color: rgba(0, 0, 0, 0.15);
     width: 100%;
-
-    div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 450px;
-    }
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     p {
       text-shadow: 3px 5px 2px rgba(50, 5, 7, 0.3137254902);
       color: #fff;
-      font-family: youngSerif;
+      font-family: "Young Serif", serif;
       font-size: clamp(2.4375rem, 1.8125rem + 3.125vw, 3.8125rem);
     }
   }
