--- a/css/modules/_home-banner.scss
+++ b/css/modules/_home-banner.scss
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'Young Serif';
-  src: url(../fonts/young-serif.woff2);
-}
-
 .home-banner {
   background: url("../img/beach-banner-800.webp") no-repeat center center /
     cover scroll;
@@ -25,7 +20,7 @@
 
 .home-banner-title {
   p {
-    font-family: 'Young Serif', serif;
+    font-family: "Young Serif", serif;
     font-size: clamp(2.4375rem, 1.8125rem + 3.125vw, 3.8125rem);
     color: $white;
     text-shadow: 3px 5px 2px #32050750;
