--- a/css/pages/_all-inclusive-page.scss
+++ b/css/pages/_all-inclusive-page.scss
@@ -40,7 +40,6 @@
   }
 
   section {
-    margin-top: 4rem;
     margin-bottom: 4rem;
   }
 }
