--- a/css/pages/_homepage.scss
+++ b/css/pages/_homepage.scss
@@ -29,6 +29,7 @@
 
   h3 {
     color: $dark-red;
+    margin-bottom: 1.5rem;
   }
 
   h4 {
@@ -68,7 +69,7 @@
   justify-content: center;
 
   a {
-    width: 150px;
+    width: 170px;
   }
 }
 
@@ -112,7 +113,7 @@
   }
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 1024px) {
   .im-jen {
     a {
       width: 15vw;
